cli/tests/snapshot/inputs/errors/array_range_reversed_indices.ncl
# capture = 'stderr'
# command = ['eval']
std.array.range 1 0
